# Narrative-Structures-Analysis

./: .dockerignore  .env_EXAMPLE  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run.py  run_bot.py  run_services.py  story.txt  telegram_bot.py  user_data.json
app/: __init__.py  constants.py  routes.py  schemas.py
app/file_handlers/: doc_handler.py  pdf_handler.py
app/templates/: index.html
bot/: telegram_bot.py
config/: bot_messages.json
dashboard/: __init__.py  routes.py
db/: database.py
docs/: project_structure.txt
narr_mod/: __init__.py  base_structure.py  campbell_monomyth.py  field_paradigm.py  four_act.py  gulino_sequence.py  gulino_sequence_approach.py  harmon_story_circle.py  hero_journey.py  monomyth.py  soth_story_structure.py  three_act.py  vogler_hero_journey.py  watts_eight_point_arc.py
service/: __init__.py  balance_service.py  converter.py  evaluator.py  extractor.py  gigachat_client.py  gigachat_embeddings.py  llm.py  multilingual_embeddings.py  prompts.py  rag_processor.py
shared/: config.py  constants.py  models_api.py
templates/: index.html
templates/dashboard/: bot_messages.html  index.html  models.html  users.html
tests/: conftest.py  test_app.py  test_converter.py  test_embeddings.py  test_evaluator.py  test_flask.py  test_four_act_analysis.py  test_gigachat.py  test_llm.py  test_rag.py  test_story.txt  test_telegram.py  test_telegram_complex.py
